assets/main.css
html {
  overflow-y: scroll;
  height: 100%;
  user-select: none;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 14pt;
  display: grid;
  grid-template-rows: fit-content(15ex) auto fit-content(6ex);
  height: 100%;
  margin: 0;
  background-color: rgb(0, 82, 81);
  color: #dee;
}


body > footer {
  z-index: 1;
  font-size: 10pt;
  padding: 0 1ex;
  text-align: right;
}

body > footer a, .mapboxgl-popup-content a {
  text-decoration: underline;
  font-weight: bold;
  color: inherit;
}

body > footer a:hover {
  color: #fff;
}

body > footer ul {
  margin: 0;
  padding: 0;
}

body > footer ul li {
  display: inline;
}
body > footer ul li:not(:first-child)::before {
  content: "| ";
}


body > header {
  z-index: 1;
  box-shadow: 0 0 0.4ex #000;
  display: flex;
  flex-direction: column;
}

body > header > input.expand {
  appearance: none;
  font-size: inherit;
  height: 2ex;
  margin: 0.5ex;
  order: 2;
  background: transparent url(double-arrow-down.svg) no-repeat 50% 50% / 16px;
}

body > header > input.expand:checked {
  background-image: url(double-arrow-up.svg);
}

body > header > input.expand:hover,
body > header > input.expand:active {
  background-color: #377;
}

body > header > input.expand + form > .expanded-only {
  display: none;
}

body > header > input.expand:checked + form > .expanded-only {
  display: inherit;
}

body > header > form {
  padding: 0.3ex 0.5em;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

fieldset {
  border: none;
  padding: 0;
  display: flex;
  align-items: center;
  margin: 0.2ex 0;
}

/* Container for #date */
fieldset:nth-child(1) {
  min-width: 0;
  flex: 3 1 20em;
  width: calc(100vw - 3.5em);
  max-width: max-content;
}

/* Container for #search */
fieldset:nth-child(2) {
  flex: 1 1 15em;
}

@media screen and (max-width: 600px) {
  fieldset:nth-child(2) {
    flex: 1 1 12em;
  }
}

fieldset:nth-child(2) > input {
  width: 100%;
}

input.expand:checked + form > fieldset:first-child {
  flex: auto;
}


@media screen and (max-width: 40em) {
  .report-bug {
    display: none;
  }
}

input[type="text"] {
  height: 4.8ex;
  background-color: #fff;
  border-radius: 15px;
  border: 1px solid #ccc;
  padding: 0 0.5em;
  font-size: inherit;
  font-family: inherit;
  margin-left: 0.5em;
  margin-right: 0.5em;
}

.options {
  display: inline-grid;
  grid-auto-flow: column;
  margin: 0.4ex 0.5em 0.4ex;
  font-size: inherit;
  height: 4.8ex;
}

.options label {
  color: #686;
  background-color: #fff;
  padding: 0 0.5em;
  margin: 0 auto;
  text-align: center;
  display: inline-grid;
  align-items: center;
}

.options label.weekend {
  color: #363;
  background-color: #d8e8e6;
}

.options label small {
  font-size: 60%;
}

.options input {
  opacity: 0;
  width: 0;
  height: 0;
  margin: 0;
  appearance: none;
}
.options input + label {
  border: 1px solid;
  border-top-color: #ccc;
  border-bottom-color: #ccc;
  border-radius: 0;
  border-left: none;
  border-right: none;
}
.options input:first-child + label {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
  border-left: 1px solid #ccc;
  padding-left: 0.75em;
}
.options input + label:last-child {
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  border-right: 1px solid #ccc;
  padding-right: 0.75em;
}
.options input:checked + label {
  background-color: #488;
  color: #fff;
}
.options input:checked + label {
  border-color: #688;
}
.options input:focus + label {
  border-color: #464;
  border-left: 1px solid #464;
  margin-left: -1px;
}
.options input:focus:first-child + label {
  margin-left: 0;
}
.options input:focus + label + input + label {
  border-left: 1px solid #464;
  margin-left: -1px;
}
.options:hover input + label {
  border-top-color: #242 !important;
  border-bottom-color: #242 !important;
}
.options:hover input:first-child + label {
  border-left-color: #242 !important;
}
.options:hover input + label:last-child {
  border-right-color: #242 !important;
}


.options .date-gap {
  background-color: #fff;
  border: 1px solid;
  border-top-color: #ccc;
  border-bottom-color: #ccc;
  border-left: none;
  border-right: none;
  padding: 1px;
  display: flex;
}

.options .date-gap:before {
  border-right: 1px dashed #ccc;
  margin-right: 1px;
  content: " ";
  display: block;
}

.options:hover .date-gap {
  border-top-color: #242 !important;
  border-bottom-color: #242 !important;
}


timerange {
  display: grid;
  --track-width: 21em;
  --slider-width: calc(var(--track-width) / 26);
  --text-scale: 1;
  --text-padding-sides: 0.2em;
  /* there are 24 tick gaps within the slider, plus
   * some on either end for the thumbs to park in.
   * So we want slider-width to be track-width / (24 + 2 * overhang),
   * and to offset the ticks so they land on the ends. */
  margin: 0.3ex 0.5em 0.3ex;
}

@media screen and (max-width: 40em) {
  timerange {
    --track-width: 19em;
    --text-scale: 0.9;
  }
  timerange .time-text {
    margin-top: 1px;
  }
}

@media screen and (max-width: 35em) {
  timerange {
    --track-width: 17em;
    --text-scale: 0.8;
  }
  timerange .time-text {
    margin-top: 2px;
  }
}

timerange {
  position: relative;
  margin-top: 0;
  margin-bottom: 0;
}

timerange .time-text {
  text-align: center;
  width: 6em;
  font-size: calc(1em * var(--text-scale));
}
timerange .time-text.movable {
  position: absolute;
  background-color: #d8e8e6;
  border: 1px solid #688;
  color: #686;
  border-radius: 10px;
  padding: 7px var(--text-padding-sides);
  z-index: 1;
}

input[type="range"] {
  width: var(--track-width);
  grid-area: 2 / 1;
  -webkit-appearance: none;
  background-color: transparent;
  overflow: hidden;
  pointer-events: none;
  height: 2.8ex;
  font-size: inherit;
}
/* Chrome gets upset if you combine these */
input[type="range"]::-webkit-slider-runnable-track {
  height: 30px;
  overflow: hidden;
}
input[type="range"]::-moz-range-track {
  height: 30px;
  overflow: hidden;
}
/* ... */

